--- a/src/components/dropdown-service/styles.scss
+++ b/src/components/dropdown-service/styles.scss
@@ -1,6 +1,7 @@
 .service-container {
 	display: flex;
 	flex-direction: column;
-	max-height: 100px;
+	height: fit-content;
+	margin-bottom: 28px;
 	width: 100%;
 }
